@@ -1,3 +1,8 @@
+bloonix-agent (0.47) released at 2015-01-26
+
+    * Fixed: Can't call method "notice" on an undefined value
+      at /usr/share/perl5/Bloonix/Agent.pm line 81
+
 bloonix-agent (0.46) released at 2015-01-26
 
     * Fixed creation of bloonix-agent.log.
